--- a/src/types/plaid-link.html
+++ b/src/types/plaid-link.html
@@ -30,17 +30,8 @@
                 const handler = Plaid.create({
                     token: await fetchLinkToken(),
                     onSuccess: async (publicToken, metadata) => {
-                        console.log(publicToken);
-                        console.log(metadata);
-
-                        // send public token to the front end for exchanging
-                        // $.post('/plaid_token_exchange', {
-                        //     public_token: public_token,
-                        //     accounts: metadata.accounts,
-                        //     institution: metadata.institution,
-                        //     link_session_id: metadata.link_session_id,
-                        // })
-
+                        // console.log(publicToken);
+                        // console.log(metadata);
                         await fetch('/plaid_token_exchange', {
                             method: 'POST',
                             body: JSON.stringify({ publicToken }),
