--- a/src/types/plaid-link.html
+++ b/src/types/plaid-link.html
@@ -4,9 +4,24 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <style>
+            .button {
+                border: none;
+                color:beige;
+                padding: 8px 10px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 12px;
+                margin: 4px 2px;
+                background-color: #2A94AF;
+                border-radius: 15px;
+            }
+        </style>
     </head>
     <body>
-        <button id="link-button">Link Bank Accounts</button>
+        <button id="link-button" class='button'>Link Bank Accounts</button>
+        <!-- <h3> Add Bank Accounts</h2> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
         <script src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
         <script type="text/javascript">
