--- a/src/screens/main/Venmo.html
+++ b/src/screens/main/Venmo.html
@@ -40,6 +40,9 @@
 			color: white;
 			}
 		</style>
+		<!-- <script src="https://js.braintreegateway.com/web/3.79.1/js/client.min.js"></script>
+		<script src="https://js.braintreegateway.com/web/3.79.1/js/venmo.min.js"></script>
+		<script src="https://js.braintreegateway.com/web/3.79.1/js/data-collector.min.js"></script> -->
         <script src="https://js.braintreegateway.com/web/dropin/1.31.0/js/dropin.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
     </head>
